@@ -1,3 +1,15 @@
+2010-06-09  Qi Zhang  <qi.2.zhang@nokia.com>
+
+        Reviewed by Laszlo Gombos.
+
+        [Qt] Failed at http://philip.html5.org/tests/canvas/suite/tests/2d.path.arcTo.transformation.html
+        https://bugs.webkit.org/show_bug.cgi?id=38598
+
+        In path transform function handle path only have moveElement case.
+
+        * platform/graphics/qt/PathQt.cpp:
+        (WebCore::Path::transform):
+
 2010-06-09  Anton Muhin  <antonm@chromium.org>
 
         Reviewed by Nate Chapin.
